<resources>
    <string name="app_name">App Sereno</string>
    <string name="favorite">Favoritos</string>
    <string name="content_description_favorite">Descripción</string>
    <string name="search">Buscar</string>
    <string name="content_description_search">Buscar</string>
    <string name="more">Más</string>
    <string name="content_description_more">Más</string>
    <string name="test_label">Test</string>
    <string name="error_connection_message">Error connection</string>
    <string name="unser_name">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="logout">Salir</string>
    <string name="logout_description">Cerrar sesión</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="login_subtitle">Ingresa tu usuario y contraseña</string>
    <string name="keep_session_text">Mantener sesión activa</string>
    <string name="btn_login_text">INICIAR SESIÓN</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Inicio</string>
    <string name="report_title">Reportar</string>
    <string name="pending_title">Pendientes</string>
    <string name="stream_title">Transmitir</string>
    <string name="streaming_live">Transmisión en vivo</string>
    <string name="content_description_streaming_live">Transmisión en vivo</string>
    <string name="title_activity_ubicacion_map">Map</string>
</resources>